Java 8 compatibility + version 0.0.1-alpha.1
- Path.of() → Paths.get() (Java 8 compat)
- List.of() → Collections.emptyList() / Arrays.asList() (Java 8 compat)
- String.isBlank() → .trim().isEmpty() (Java 8 compat)
- compiler target: 11 → 1.8
- CI matrix: add Java 8
- version: 0.1.0 → 0.0.1-alpha.1